src/applications/gi-sandbox/sass/partials/_gi-compare-drawer.scss
.compare-drawer {
  position: fixed;
  bottom: 0;
  display: block;
  z-index: 2000;
  width: 100% !important;

  &.stuck {
    position: static;
  }

  &.scrollable {
    overflow-y: scroll;
    height: 100% !important;
  }

  .compare-drawer-expanded {
    height: 12.5em;
    &.floating {
      transition: height 0.3s ease-in-out;
    }

    @media (max-width: $small-screen) {
      &.floating {
        transition: height 0.3s ease-in-out;
      }
      height: 100%;
    }
  }

  .compare-drawer-collapsed {
    &.floating {
      transition: height 0.3s ease-in-out;
    }
    height: 2.5em;
  }
  @media (prefers-reduced-motion: reduce) {
    .compare-drawer-expanded {
      &.floating {
        transition: 0s;
      }
      height: 12.5em;

      @media (max-width: $small-screen) {
        &.floating {
          transition: 0s;
        }
        height: 100%;
      }
    }
    .compare-drawer-collapsed {
      &.floating {
        transition: 0s;
      }
      height: 2.5em;
    }
  }

  .compare-header {
    background-color: $color-primary;
    color: $color-white;
    text-align: center;
    height: 2.5em;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    padding-top: 0.5em;
    font-weight: bold;

    .header-label {
      display: inline-flex;
      width: auto;
      text-align: center;
      vertical-align: middle;
      background-color: transparent;
      margin-top: -5px;
    }

    .header-label::after {
      font-family: "Font Awesome 5 Free";
      font-weight: 900;
      font-size: 150%;
      vertical-align: middle;
      padding-left: 0.5em;
      margin-top: -4px;
      background-color: transparent;
    }

    .header-label.open::after {
      content: "\F107";
    }

    .header-label.closed::after {
      content: "\F106";
    }
  }

  .compare-body {
    background-color: $color-white;
    border: 1px solid $color-gray-light;
    height: 10em;
    padding-left: 0.75em;
    padding-right: 0.75em;

    .action-cell {
      padding-left: 1em;
    }

    .compare-name {
      height: 6em;
      padding-top: 0.5em;
      padding-right: 1.5em;
    }

    .small-function-label {
      padding: 1em 1em 0em 1em;
    }

    .large-function-label {
      height: 6em;
      padding-top: 0.5em;
      padding-right: 1.5em;
    }

    .blank {
      border: 2px dashed $color-gray-light;
      height: 6em;
      border-radius: 5px;
      margin-right: 1.5em;
    }

    @media (max-width: $small-screen) {
      height: auto;

      .compare-item {
        margin-bottom: 1em;
      }

      .institution {
        padding: 0em 1em 0em 1em;
      }

      .blank {
        height: 2.5em;
        margin-left: 1em;
        margin-right: 1em;
      }

      .large-function-label {
        display: none;
      }

      .compare-name {
        height: auto;
        padding-right: 0px;
      }

      .action-cell {
        padding-right: 1em;
      }
    }

    @media (min-width: $small-screen) {
      .small-function-label {
        display: none;
      }
    }
  }

  @media (max-width: $small-screen) {
    padding-left: 8px;
    padding-right: 8px;
  }
}

